Deleting image charts and adding d3.js charts

--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
           preserveAspectRatio="xMinYMin meet"
         ></svg>
       </div>
+      <!-------------------------- Bar Chart horizontal -->
       <div class="graph-container">
         <h4>Bar Chart Horizontal</h4>
         <p>
@@ -320,7 +321,15 @@
           of the data it corresponds to, making it easy to compare values across
           categories.
         </p>
+        <h5>Passenger by Flight type</h5>
+        <svg
+          id="bar-chart-horizontal"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
+
+      <!-------------------------- Area Chart  -->
       <div class="graph-container">
         <h4>Area Chart</h4>
         <p>
@@ -329,25 +338,15 @@
           cumulative values over time or across categories, as well as seeing
           how quantities change.
         </p>
-        <img
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/area.png"
-          alt="graph xx"
-        />
+        <h5>Passenger Data</h5>
+        <svg
+          id="area-chart"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
-      <div class="graph-container">
-        <h4>Area Chart Stacked</h4>
-        <p>
-          Variation of an area chart where multiple data series are stacked on
-          top of each other, with each series represented by a shaded area.
-          Instead of overlapping, each layer stacks on top of the previous one,
-          showing the cumulative total of all series and how individual segments
-          contribute to this total over time
-        </p>
-        <img
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/area_stacked.png"
-          alt="graph xx"
-        />
-      </div>
+
+      <!-------------------------- Scatter Plot  -->
       <div class="graph-container">
         <h4>Scatter Plot</h4>
         <p>
@@ -357,11 +356,15 @@
           other on the y-axis. Each data point represents a unique observation
           in the dataset.
         </p>
-        <img alt="graph xx" /><img
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/scatter.png"
-          alt="graph xx"
-        />
+        <h5>Customer Satisfaction</h5>
+        <svg
+          id="scatter-plot"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
+
+      <!-------------------------- Pie Chart  -->
       <div class="graph-container">
         <h4>Pie Chart</h4>
         <p>
@@ -370,12 +373,15 @@
           category's contribution to the total, making it easy to visualize
           relative sizes.
         </p>
-        <img
-          style="max-width: 400px"
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/pie_chart.png"
-          alt="graph xx"
-        />
+        <h5>Passengers by Class</h5>
+        <svg
+          id="pie-chart"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
+
+      <!-------------------------- Donut Chart -->
       <div class="graph-container">
         <h4>Donut Chart</h4>
         <p>
@@ -383,11 +389,12 @@
           donut. It is used to display data in a circular format, showing the
           relative proportions of a whole, similar to a pie chart.
         </p>
-        <img
-          style="max-width: 400px"
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/donut.png"
-          alt="graph xx"
-        />
+        <h5>Passengers by Class</h5>
+        <svg
+          id="donut-chart"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
     </section>
 
