Dividing js file

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
         <h5>Passengers data by Month.</h5>
         <svg
           id="line-chart"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -276,6 +277,7 @@
         <h5>Reveneu and Expenses by month.</h5>
         <svg
           id="line-chart-stacked"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -293,6 +295,7 @@
         <h5>Most popular destinations</h5>
         <svg
           id="bar-chart"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -308,6 +311,7 @@
         <h5>Revenue by Class</h5>
         <svg
           id="bar-chart-stacked"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -324,6 +328,7 @@
         <h5>Passenger by Flight type</h5>
         <svg
           id="bar-chart-horizontal"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -341,6 +346,7 @@
         <h5>Passenger Data</h5>
         <svg
           id="area-chart"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -359,6 +365,7 @@
         <h5>Customer Satisfaction</h5>
         <svg
           id="scatter-plot"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -376,6 +383,7 @@
         <h5>Passengers by Class</h5>
         <svg
           id="pie-chart"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -392,6 +400,7 @@
         <h5>Passengers by Class</h5>
         <svg
           id="donut-chart"
+          class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
@@ -410,5 +419,14 @@
     </footer>
 
     <script src="scripts/main.js"></script>
+    <script src="scripts/line_chart.js"></script>
+    <script src="scripts/line_chart_stacked.js"></script>
+    <script src="scripts/bar_chart.js"></script>
+    <script src="scripts/bar_chart_stacked.js"></script>
+    <script src="scripts/bar_chart_horizontal.js"></script>
+    <script src="scripts/area_chart.js"></script>
+    <script src="scripts/scatter_plot.js"></script>
+    <script src="scripts/pie_chart.js"></script>
+    <script src="scripts/donut_chart.js"></script>
   </body>
 </html>
