Adding type scale

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
       <div class="block intro">
         <h4>Intro</h4>
-        <p class="fake-allura">This is Allura. Our brand Typeface.</p>
+        <p class="allura">This is Allura. Our brand Typeface.</p>
         <p>
           We selected Allura as our brand typeface because it captures an
           elegant, approachable style that resonates with our brand's identity.
@@ -216,7 +216,7 @@
         </p>
         <br />
         <br />
-        <p class="fake-monserrat">Monserrat is our supporting font.</p>
+        <p class="monserrat">Monserrat is our supporting font.</p>
         <p>
           Montserrat serves as our primary support font, selected for its
           exceptional flexibility and clean, modern aesthetic. Its simplicity
@@ -227,7 +227,7 @@
         </p>
         <br />
         <br />
-        <p class="fake-open">Open Sans for regular text.</p>
+        <p>Open Sans for regular text.</p>
         <br />
         <p>
           Open Sans is our chosen text font, thoughtfully selected to enhance
@@ -238,11 +238,60 @@
           understand and engage with content.
         </p>
       </div>
-      <div class="block Type-scale">
+      <div class="block type-scale">
         <h4>Type Scale</h4>
+        <div class="type-chart">
+          <hr />
+          <div class="type-chart-row">
+            <p class="type-chart-row-title headingOne">Heading One</p>
+            <p class="type-chart-row-size">70px</p>
+            <p class="type-chart-row-name">Allura · Bold</p>
+          </div>
+          <hr />
+          <div class="type-chart-row">
+            <p class="type-chart-row-title headingTwo">Heading Two</p>
+            <p class="type-chart-row-size">40px</p>
+            <p class="type-chart-row-name">Monserrat · Bold</p>
+          </div>
+          <hr />
+          <div class="type-chart-row">
+            <p class="type-chart-row-title headingThree">Heading Three</p>
+            <p class="type-chart-row-size">35px</p>
+            <p class="type-chart-row-name">Monserrat · Bold</p>
+          </div>
+          <hr />
+          <div class="type-chart-row">
+            <p class="type-chart-row-title headingFour">Heading Four</p>
+            <p class="type-chart-row-size">22px</p>
+            <p class="type-chart-row-name">Monserrat · Medium</p>
+          </div>
+          <hr />
+          <div class="type-chart-row">
+            <p class="type-chart-row-title headingFive">Heading Five</p>
+            <p class="type-chart-row-size">14px</p>
+            <p class="type-chart-row-name">Monserrat · Bold</p>
+          </div>
+          <hr />
+          <div class="type-chart-row">
+            <p class="type-chart-row-title">Body</p>
+            <p class="type-chart-row-size">16px</p>
+            <p class="type-chart-row-name">Open Sans · Regular</p>
+          </div>
+          <hr />
+          <div class="type-chart-row">
+            <p class="type-chart-row-title buttons">Buttons</p>
+            <p class="type-chart-row-size">20px</p>
+            <p class="type-chart-row-name">Open Sans · Bold</p>
+          </div>
+          <hr />
+        </div>
       </div>
       <div class="block paragraphs">
         <h4>Paragraphs</h4>
+        <p>
+          The default body text is 16px. For optimum reading length, the
+          paragraph width is responsive to the viewport.
+        </p>
       </div>
     </section>
     <section id="visualization" class="data-visualization section_format">
