Adjusting margins and paddings

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </header>
 
-    <div class="hero section_format">
+    <div class="hero">
       <div class="hero-content">
         <h1>Design System.</h1>
         <p>
@@ -111,8 +111,9 @@
       </div>
     </div>
 
-    <section id="colors" class="colors-section section_format">
-      <h2 class="section_title">Colors</h2>
+    <!-- ^ ------------------- Colors section ------------------- -->
+    <section id="colors" class="colors-section">
+      <h2>Colors</h2>
 
       <div class="colors-container">
         <h4>Brand colors</h4>
@@ -192,11 +193,13 @@
         </div>
       </div>
     </section>
-    <section id="layout" class="layout-section section_format">
-      <h2 class="section_title">Layout</h2>
+    <!-- ^ ------------------- Layout section ------------------- -->
+    <section id="layout" class="layout-section">
+      <h2>Layout</h2>
     </section>
-    <section id="typography" class="typography-section section_format">
-      <h2 class="section_title">Typography</h2>
+    <!-- ^ ------------------- typography section ------------------- -->
+    <section id="typography" class="typography-section">
+      <h2>Typography</h2>
 
       <div class="block intro">
         <h4>Intro</h4>
@@ -294,8 +297,9 @@
         </p>
       </div>
     </section>
-    <section id="visualization" class="data-visualization section_format">
-      <h2 class="section_title">Data visualization</h2>
+    <!-- ^ ------------------- Data section ------------------- -->
+    <section id="visualization" class="data-section">
+      <h2>Data visualization</h2>
 
       <!--------------------------  Line chart -->
       <div class="graph-container">
