Applying DRY code

--- a/index.html
+++ b/index.html
@@ -111,98 +111,98 @@
       </div>
     </div>
 
-    <!-- ^ ------------------- Colors section ------------------- -->
-    <section id="colors" class="colors-section">
-      <h2>Colors</h2>
+    <!-- * ------------------- Colors section ------------------- -->
+    <section id="colors" class="colors-wrapp container_utility">
+      <h2 class="section_title_utility">Colors</h2>
 
-      <div class="colors-container">
-        <h4>Brand colors</h4>
+      <div class="colors-block">
+        <h4 class="sub_section_title_utility">Brand colors</h4>
 
-        <div class="colors-row">
-          <div class="box">
-            <div class="color brand">#ed1c24</div>
-            <p>Red (Pigment)</p>
+        <div class="colors-block-row">
+          <div class="color-box">
+            <div class="color-sample brand">#ed1c24</div>
+            <p class="color-name">Red (Pigment)</p>
           </div>
-          <div class="box">
-            <div class="color brand-light">#ff4d52</div>
-            <p>Orange-Red (Crayola)</p>
+          <div class="color-box">
+            <div class="color-sample brand-light">#ff4d52</div>
+            <p class="color-name">Orange-Red (Crayola)</p>
           </div>
-          <div class="box">
-            <div class="color brand-dark">#a31418</div>
-            <p>Blood (Animal)</p>
-          </div>
-        </div>
-      </div>
-      <div class="colors-container">
-        <h4>Functional colors</h4>
-        <div class="colors-row">
-          <div class="box">
-            <div class="color success" id="success">#5cb85c</div>
-            <p>Apple</p>
-          </div>
-          <div class="box">
-            <div class="color warning">#f0ad4e</div>
-            <p>Maximum Yellow Red</p>
-          </div>
-          <div class="box">
-            <div class="color info">#5bc0de</div>
-            <p>Sea Serpent</p>
-          </div>
-          <div class="box">
-            <div class="color error">#d9534f</div>
-            <p>Jelly Bean</p>
+          <div class="color-box">
+            <div class="color-sample brand-dark">#a31418</div>
+            <p class="color-name">Blood (Animal)</p>
           </div>
         </div>
       </div>
-      <div class="colors-container">
-        <h4>Accent Colors</h4>
-        <div class="colors-row">
-          <div class="box">
-            <div class="color acce-primary">#1c24ed</div>
-            <p>Bluebonnet</p>
+      <div class="colors-block">
+        <h4 class="sub_section_title_utility">Functional colors</h4>
+        <div class="colors-block-row">
+          <div class="color-box">
+            <div class="color-sample success" id="success">#5cb85c</div>
+            <p class="color-name">Apple</p>
           </div>
-          <div class="box">
-            <div class="color acce-secondary">#22ed1c</div>
-            <p>Neon Green</p>
+          <div class="color-box">
+            <div class="color-sample warning">#f0ad4e</div>
+            <p class="color-name">Maximum Yellow Red</p>
           </div>
-          <div class="box">
-            <div class="color acce-tertiary">#52ff4d</div>
-            <p>Screamin' Green</p>
+          <div class="color-box">
+            <div class="color-sample info">#5bc0de</div>
+            <p class="color-name">Sea Serpent</p>
           </div>
-          <div class="box">
-            <div class="color acce-quaternary">#4d52ff</div>
-            <p>Ultramarine Blue</p>
+          <div class="color-box">
+            <div class="color-sample error">#d9534f</div>
+            <p class="color-name">Jelly Bean</p>
           </div>
         </div>
       </div>
-      <div class="colors-container">
-        <h4>Neutral Colors</h4>
-        <div class="colors-row">
-          <div class="box">
-            <div class="color neu-dark">#1c1f2c</div>
-            <p>Dark Gunmetal</p>
+      <div class="colors-block">
+        <h4 class="sub_section_title_utility">Accent Colors</h4>
+        <div class="colors-block-row">
+          <div class="color-box">
+            <div class="color-sample acce-primary">#1c24ed</div>
+            <p class="color-name">Bluebonnet</p>
           </div>
-          <div class="box">
-            <div class="color neu-medium">#2d2d39</div>
-            <p>Gunmetal</p>
+          <div class="color-box">
+            <div class="color-sample acce-secondary">#22ed1c</div>
+            <p class="color-name">Neon Green</p>
           </div>
-          <div class="box">
-            <div class="color neu-light">#a0a0a0</div>
-            <p>Quick Silver</p>
+          <div class="color-box">
+            <div class="color-sample acce-tertiary">#52ff4d</div>
+            <p class="color-name">Screamin' Green</p>
+          </div>
+          <div class="color-box">
+            <div class="color-sample acce-quaternary">#4d52ff</div>
+            <p class="color-name">Ultramarine Blue</p>
+          </div>
+        </div>
+      </div>
+      <div class="colors-block">
+        <h4 class="sub_section_title_utility">Neutral Colors</h4>
+        <div class="colors-block-row">
+          <div class="color-box">
+            <div class="color-sample neu-dark">#1c1f2c</div>
+            <p class="color-name">Dark Gunmetal</p>
+          </div>
+          <div class="color-box">
+            <div class="color-sample neu-medium">#2d2d39</div>
+            <p class="color-name">Gunmetal</p>
+          </div>
+          <div class="color-box">
+            <div class="color-sample neu-light">#a0a0a0</div>
+            <p class="color-name">Quick Silver</p>
           </div>
         </div>
       </div>
     </section>
-    <!-- ^ ------------------- Layout section ------------------- -->
-    <section id="layout" class="layout-section">
-      <h2>Layout</h2>
+    <!-- * ------------------- Layout section ------------------- -->
+    <section id="layout" class="layout-wrapp container_utility">
+      <h2 class="section_title_utility">Layout</h2>
     </section>
-    <!-- ^ ------------------- typography section ------------------- -->
-    <section id="typography" class="typography-section">
-      <h2>Typography</h2>
+    <!-- * ------------------- typography section ------------------- -->
+    <section id="typography" class="typography-wrapp container_utility">
+      <h2 class="section_title_utility">Typography</h2>
 
-      <div class="block intro">
-        <h4>Intro</h4>
+      <div class="typography-block">
+        <h4 class="sub_section_title_utility">Intro</h4>
         <p class="allura">This is Allura. Our brand Typeface.</p>
         <p>
           We selected Allura as our brand typeface because it captures an
@@ -211,14 +211,13 @@
           sophistication, making it ideal for creating a personal connection
           with our audience
         </p>
-        <br />
+
         <p>
           Allura's readability, even in smaller sizes, ensures it remains
           accessible across various applications, from digital interfaces to
           print.
         </p>
-        <br />
-        <br />
+
         <p class="monserrat">Monserrat is our supporting font.</p>
         <p>
           Montserrat serves as our primary support font, selected for its
@@ -228,10 +227,9 @@
           it to seamlessly complement other design elements, ensuring a cohesive
           and accessible visual experience.
         </p>
-        <br />
-        <br />
+
         <p>Open Sans for regular text.</p>
-        <br />
+
         <p>
           Open Sans is our chosen text font, thoughtfully selected to enhance
           readability and comprehension for our users. Its clean, open
@@ -241,8 +239,8 @@
           understand and engage with content.
         </p>
       </div>
-      <div class="block type-scale">
-        <h4>Type Scale</h4>
+      <div class="typography-block">
+        <h4 class="sub_section_title_utility">Type Scale</h4>
         <div class="type-chart">
           <hr />
           <div class="type-chart-row">
@@ -289,17 +287,17 @@
           <hr />
         </div>
       </div>
-      <div class="block paragraphs">
-        <h4>Paragraphs</h4>
+      <div class="typography-block">
+        <h4 class="sub_section_title_utility">Paragraphs</h4>
         <p>
           The default body text is 16px. For optimum reading length, the
           paragraph width is responsive to the viewport.
         </p>
       </div>
     </section>
-    <!-- ^ ------------------- Data section ------------------- -->
-    <section id="visualization" class="data-section">
-      <h2>Data visualization</h2>
+    <!-- * ------------------- Data section ------------------- -->
+    <section id="visualization" class="data-wrapp container_utility">
+      <h2 class="section_title_utility">Data visualization</h2>
 
       <!--------------------------  Line chart -->
       <div class="graph-container">
@@ -460,6 +458,7 @@
       </div>
     </section>
 
+    <!-- * ------------------- Footer ------------------- -->
     <footer>
       <p>Made with 💗 By: &nbsp;</p>
       <div class="group">
