--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
     <section id="typography" class="typography-wrapp container_utility">
       <h2 class="section_title_utility">Typography</h2>
 
-      <div class="typography-block">
+      <div class="typography-block-intro">
         <h4 class="sub_section_title_utility">Intro</h4>
-        <p class="allura">This is Allura. Our brand Typeface.</p>
+        <p class="heading-one-allura">This is Allura. Our brand Typeface.</p>
         <p>
           We selected Allura as our brand typeface because it captures an
           elegant, approachable style that resonates with our brand's identity.
           Its flowing, handwritten aesthetic conveys a sense of warmth and
           sophistication, making it ideal for creating a personal connection
-          with our audience
+          with our audience.
         </p>
 
         <p>
@@ -218,7 +218,7 @@
           print.
         </p>
 
-        <p class="monserrat">Monserrat is our supporting font.</p>
+        <p class="heading-two-monserrat">Monserrat is our supporting font.</p>
         <p>
           Montserrat serves as our primary support font, selected for its
           exceptional flexibility and clean, modern aesthetic. Its simplicity
@@ -228,7 +228,7 @@
           and accessible visual experience.
         </p>
 
-        <p>Open Sans for regular text.</p>
+        <p class="regular-one-open">Open Sans for regular text.</p>
 
         <p>
           Open Sans is our chosen text font, thoughtfully selected to enhance
@@ -239,55 +239,53 @@
           understand and engage with content.
         </p>
       </div>
-      <div class="typography-block">
+      <div class="typography-block-typescale">
         <h4 class="sub_section_title_utility">Type Scale</h4>
-        <div class="type-chart">
-          <hr />
+        <div class="typescale-chart">
           <div class="type-chart-row">
             <p class="type-chart-row-title headingOne">Heading One</p>
             <p class="type-chart-row-size">70px</p>
             <p class="type-chart-row-name">Allura · Bold</p>
           </div>
-          <hr />
+
           <div class="type-chart-row">
             <p class="type-chart-row-title headingTwo">Heading Two</p>
             <p class="type-chart-row-size">40px</p>
             <p class="type-chart-row-name">Monserrat · Bold</p>
           </div>
-          <hr />
+
           <div class="type-chart-row">
             <p class="type-chart-row-title headingThree">Heading Three</p>
             <p class="type-chart-row-size">35px</p>
             <p class="type-chart-row-name">Monserrat · Bold</p>
           </div>
-          <hr />
+
           <div class="type-chart-row">
             <p class="type-chart-row-title headingFour">Heading Four</p>
             <p class="type-chart-row-size">22px</p>
             <p class="type-chart-row-name">Monserrat · Medium</p>
           </div>
-          <hr />
+
           <div class="type-chart-row">
             <p class="type-chart-row-title headingFive">Heading Five</p>
             <p class="type-chart-row-size">14px</p>
             <p class="type-chart-row-name">Monserrat · Bold</p>
           </div>
-          <hr />
+
           <div class="type-chart-row">
             <p class="type-chart-row-title">Body</p>
             <p class="type-chart-row-size">16px</p>
             <p class="type-chart-row-name">Open Sans · Regular</p>
           </div>
-          <hr />
+
           <div class="type-chart-row">
             <p class="type-chart-row-title buttons">Buttons</p>
             <p class="type-chart-row-size">20px</p>
             <p class="type-chart-row-name">Open Sans · Bold</p>
           </div>
-          <hr />
         </div>
       </div>
-      <div class="typography-block">
+      <div class="typography-block-paragraphs">
         <h4 class="sub_section_title_utility">Paragraphs</h4>
         <p>
           The default body text is 16px. For optimum reading length, the
@@ -301,7 +299,7 @@
 
       <!--------------------------  Line chart -->
       <div class="graph-container">
-        <h4>Line Chart</h4>
+        <h4 class="sub_section_title_utility">Line Chart</h4>
         <p>
           Used to display data points connected by straight lines. It's commonly
           used to show trends over time, making it ideal for visualizing how
@@ -320,7 +318,7 @@
 
       <!-------------------------- Line chart Stacked -->
       <div class="graph-container">
-        <h4>Line Chart Stacked</h4>
+        <h4 class="sub_section_title_utility">Line Chart Stacked</h4>
         <p>
           Variation of a line chart where multiple data series are layered on
           top of each other, rather than overlapping.
@@ -335,7 +333,7 @@
       </div>
       <!-------------------------- Bar chart  -->
       <div class="graph-container">
-        <h4>Bar Chart</h4>
+        <h4 class="sub_section_title_utility">Bar Chart</h4>
         <p>
           Uses rectangular bars to represent data values. The length or height
           of each bar corresponds to the value it represents. Bar charts are
@@ -354,7 +352,7 @@
 
       <!-------------------------- Bar Chart stacked -->
       <div class="graph-container">
-        <h4>Bar Chart Stacked</h4>
+        <h4 class="sub_section_title_utility">Bar Chart Stacked</h4>
         <p>
           Variation of a bar chart where multiple data series are stacked on top
           of each other in a single bar, rather than being placed side-by-side
@@ -369,7 +367,7 @@
       </div>
       <!-------------------------- Bar Chart horizontal -->
       <div class="graph-container">
-        <h4>Bar Chart Horizontal</h4>
+        <h4 class="sub_section_title_utility">Bar Chart Horizontal</h4>
         <p>
           Bar chart where the bars extend horizontally from the y-axis instead
           of vertically from the x-axis. Each bar's length represents the value
@@ -387,7 +385,7 @@
 
       <!-------------------------- Area Chart  -->
       <div class="graph-container">
-        <h4>Area Chart</h4>
+        <h4 class="sub_section_title_utility">Area Chart</h4>
         <p>
           Type of chart similar to a line chart but with the area below the line
           filled with color or shading. This makes it useful for visualizing
@@ -405,7 +403,7 @@
 
       <!-------------------------- Scatter Plot  -->
       <div class="graph-container">
-        <h4>Scatter Plot</h4>
+        <h4 class="sub_section_title_utility">Scatter Plot</h4>
         <p>
           Type of chart that displays data as individual points on a
           two-dimensional grid. It’s used to visualize the relationship between
@@ -424,7 +422,7 @@
 
       <!-------------------------- Pie Chart  -->
       <div class="graph-container">
-        <h4>Pie Chart</h4>
+        <h4 class="sub_section_title_utility">Pie Chart</h4>
         <p>
           Circular statistical graphic divided into slices to illustrate the
           numerical proportions of a whole. Each slice of the pie represents a
@@ -442,7 +440,7 @@
 
       <!-------------------------- Donut Chart -->
       <div class="graph-container">
-        <h4>Donut Chart</h4>
+        <h4 class="sub_section_title_utility">Donut Chart</h4>
         <p>
           Is a variation of a pie chart with a hole in the center, resembling a
           donut. It is used to display data in a circular format, showing the
