Starting layout section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <h2 class="section_title_utility">Colors</h2>
 
       <div class="colors-block">
-        <h4 class="sub_section_title_utility">Brand colors</h4>
+        <h4 class="sub_section_title_utility">- Brand colors</h4>
 
         <div class="colors-block-row">
           <div class="color-box">
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="colors-block">
-        <h4 class="sub_section_title_utility">Functional colors</h4>
+        <h4 class="sub_section_title_utility">- Functional colors</h4>
         <div class="colors-block-row">
           <div class="color-box">
             <div class="color-sample success" id="success">#5cb85c</div>
@@ -155,7 +155,7 @@
         </div>
       </div>
       <div class="colors-block">
-        <h4 class="sub_section_title_utility">Accent Colors</h4>
+        <h4 class="sub_section_title_utility">- Accent Colors</h4>
         <div class="colors-block-row">
           <div class="color-box">
             <div class="color-sample acce-primary">#1c24ed</div>
@@ -176,7 +176,7 @@
         </div>
       </div>
       <div class="colors-block">
-        <h4 class="sub_section_title_utility">Neutral Colors</h4>
+        <h4 class="sub_section_title_utility">- Neutral Colors</h4>
         <div class="colors-block-row">
           <div class="color-box">
             <div class="color-sample neu-dark">#1c1f2c</div>
@@ -202,7 +202,7 @@
       <h2 class="section_title_utility">Typography</h2>
 
       <div class="typography-block-intro">
-        <h4 class="sub_section_title_utility">Intro</h4>
+        <h4 class="sub_section_title_utility">- Intro</h4>
         <p class="heading-one-allura">This is Allura. Our brand Typeface.</p>
         <p>
           We selected Allura as our brand typeface because it captures an
@@ -240,7 +240,7 @@
         </p>
       </div>
       <div class="typography-block-typescale">
-        <h4 class="sub_section_title_utility">Type Scale</h4>
+        <h4 class="sub_section_title_utility">- Type Scale</h4>
         <div class="typescale-chart">
           <div class="type-chart-row">
             <p class="type-chart-row-title headingOne">Heading One</p>
@@ -286,7 +286,7 @@
         </div>
       </div>
       <div class="typography-block-paragraphs">
-        <h4 class="sub_section_title_utility">Paragraphs</h4>
+        <h4 class="sub_section_title_utility">- Paragraphs</h4>
         <p>
           The default body text is 16px. For optimum reading length, the
           paragraph width is responsive to the viewport.
@@ -299,7 +299,7 @@
 
       <!--------------------------  Line chart -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Line Chart</h4>
+        <h4 class="sub_section_title_utility">- Line Chart</h4>
         <p>
           Used to display data points connected by straight lines. It's commonly
           used to show trends over time, making it ideal for visualizing how
@@ -318,7 +318,7 @@
 
       <!-------------------------- Line chart Stacked -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Line Chart Stacked</h4>
+        <h4 class="sub_section_title_utility">- Line Chart Stacked</h4>
         <p>
           Variation of a line chart where multiple data series are layered on
           top of each other, rather than overlapping.
@@ -333,7 +333,7 @@
       </div>
       <!-------------------------- Bar chart  -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Bar Chart</h4>
+        <h4 class="sub_section_title_utility">- Bar Chart</h4>
         <p>
           Uses rectangular bars to represent data values. The length or height
           of each bar corresponds to the value it represents. Bar charts are
@@ -352,7 +352,7 @@
 
       <!-------------------------- Bar Chart stacked -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Bar Chart Stacked</h4>
+        <h4 class="sub_section_title_utility">- Bar Chart Stacked</h4>
         <p>
           Variation of a bar chart where multiple data series are stacked on top
           of each other in a single bar, rather than being placed side-by-side
@@ -367,7 +367,7 @@
       </div>
       <!-------------------------- Bar Chart horizontal -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Bar Chart Horizontal</h4>
+        <h4 class="sub_section_title_utility">- Bar Chart Horizontal</h4>
         <p>
           Bar chart where the bars extend horizontally from the y-axis instead
           of vertically from the x-axis. Each bar's length represents the value
@@ -385,7 +385,7 @@
 
       <!-------------------------- Area Chart  -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Area Chart</h4>
+        <h4 class="sub_section_title_utility">- Area Chart</h4>
         <p>
           Type of chart similar to a line chart but with the area below the line
           filled with color or shading. This makes it useful for visualizing
@@ -403,7 +403,7 @@
 
       <!-------------------------- Scatter Plot  -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Scatter Plot</h4>
+        <h4 class="sub_section_title_utility">- Scatter Plot</h4>
         <p>
           Type of chart that displays data as individual points on a
           two-dimensional grid. It’s used to visualize the relationship between
@@ -422,7 +422,7 @@
 
       <!-------------------------- Pie Chart  -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Pie Chart</h4>
+        <h4 class="sub_section_title_utility">- Pie Chart</h4>
         <p>
           Circular statistical graphic divided into slices to illustrate the
           numerical proportions of a whole. Each slice of the pie represents a
@@ -440,7 +440,7 @@
 
       <!-------------------------- Donut Chart -->
       <div class="graph-container">
-        <h4 class="sub_section_title_utility">Donut Chart</h4>
+        <h4 class="sub_section_title_utility">- Donut Chart</h4>
         <p>
           Is a variation of a pie chart with a hole in the center, resembling a
           donut. It is used to display data in a circular format, showing the
