--- a/index.html
+++ b/index.html
@@ -196,6 +196,47 @@
     <!-- * ------------------- Layout section ------------------- -->
     <section id="layout" class="layout-wrapp container_utility">
       <h2 class="section_title_utility">Layout</h2>
+
+      <h4 class="sub_section_title_utility">- Grid System</h4>
+      <p>
+        Our grid system is composed of 8 flexible columns with a gutter between
+        columns of 30px. We apply border-box so that the border and padding is
+        included in the width of the grid columns.
+      </p>
+
+      <div class="grid-layout">
+        <!-- Mobile -->
+        <div class="grid-layout-row grid-layout-row-one">
+          <div class="block-layout">1/1</div>
+        </div>
+        <!-- Tablets -->
+        <div class="grid-layout-row grid-layout-row-two">
+          <div class="block-layout">1/2</div>
+          <div class="block-layout">1/2</div>
+        </div>
+        <!-- Laptops -->
+        <div class="grid-layout-row grid-layout-row-three">
+          <div class="block-layout">1/3</div>
+          <div class="block-layout">1/3</div>
+          <div class="block-layout">1/3</div>
+        </div>
+        <!-- Desktop  + 1200 -->
+        <div class="grid-layout-row grid-layout-row-four">
+          <div class="block-layout">1/4</div>
+          <div class="block-layout">1/4</div>
+          <div class="block-layout">1/4</div>
+          <div class="block-layout">1/4</div>
+        </div>
+
+        <!-- Large Desktop -->
+        <div class="grid-layout-row grid-layout-row-five">
+          <div class="block-layout">1/5</div>
+          <div class="block-layout">1/5</div>
+          <div class="block-layout">1/5</div>
+          <div class="block-layout">1/5</div>
+          <div class="block-layout">1/5</div>
+        </div>
+      </div>
     </section>
     <!-- * ------------------- typography section ------------------- -->
     <section id="typography" class="typography-wrapp container_utility">
