--- a/index.html
+++ b/index.html
@@ -206,20 +206,24 @@
 
       <div class="grid-layout">
         <!-- Mobile -->
+        <h5>Mobile (0px - 599px)</h5>
         <div class="grid-layout-row grid-layout-row-one">
           <div class="block-layout">1/1</div>
         </div>
+        <h5>Small Tablet (600px - 899px)</h5>
         <!-- Tablets -->
         <div class="grid-layout-row grid-layout-row-two">
           <div class="block-layout">1/2</div>
           <div class="block-layout">1/2</div>
         </div>
+        <h5>Big Tablet (900px - 1199px)</h5>
         <!-- Laptops -->
         <div class="grid-layout-row grid-layout-row-three">
           <div class="block-layout">1/3</div>
           <div class="block-layout">1/3</div>
           <div class="block-layout">1/3</div>
         </div>
+        <h5>Laptop (1200px - 1439px)</h5>
         <!-- Desktop  + 1200 -->
         <div class="grid-layout-row grid-layout-row-four">
           <div class="block-layout">1/4</div>
@@ -227,7 +231,7 @@
           <div class="block-layout">1/4</div>
           <div class="block-layout">1/4</div>
         </div>
-
+        <h5>Desktop (1440px +)</h5>
         <!-- Large Desktop -->
         <div class="grid-layout-row grid-layout-row-five">
           <div class="block-layout">1/5</div>
@@ -237,6 +241,52 @@
           <div class="block-layout">1/5</div>
         </div>
       </div>
+
+      <h4 class="sub_section_title_utility">- Breakpoints</h4>
+      <p>The device ranges are more aligned with common screen sizes today.</p>
+
+      <table class="breakpoints-table">
+        <thead>
+          <tr>
+            <th>Devices</th>
+            <th>Columns</th>
+            <th>Grid Items</th>
+            <th>Gutter</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Mobile (0px - 599px)</td>
+            <td>1 column per row</td>
+            <td>100%</td>
+            <td>8-12px</td>
+          </tr>
+          <tr>
+            <td>Small Tablet (600px - 899px)</td>
+            <td>2 colmuns per row</td>
+            <td>50%</td>
+            <td>12-16px</td>
+          </tr>
+          <tr>
+            <td>Big Tablet (900px - 1199px)</td>
+            <td>3 colmuns per row</td>
+            <td>33.3%</td>
+            <td>16px</td>
+          </tr>
+          <tr>
+            <td>Laptop (1200px - 1439px)</td>
+            <td>4 colmuns per row</td>
+            <td>25%</td>
+            <td>20px</td>
+          </tr>
+          <tr>
+            <td>Desktop (1440px +)</td>
+            <td>5 colmuns per row</td>
+            <td>20%</td>
+            <td>24px</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
     <!-- * ------------------- typography section ------------------- -->
     <section id="typography" class="typography-wrapp container_utility">
